--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link src="stylesheet"href="style.css">
 <style>
 p {
   text-align: center;
@@ -18,7 +19,7 @@ p {
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Jan 31, 2024 15:37:25").getTime();
+var countDownDate = new Date("Jan 31, 2050 15:37:25").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
